Fixes, based on feedback. paddings / margins to row/column-gap. Removed unnecessary css attributes.

--- a/04-lection2/01-histogram/histogram.css
+++ b/04-lection2/01-histogram/histogram.css
@@ -7,16 +7,16 @@
     box-sizing: border-box;
     border-radius: 8px;
     padding: 16px 24px 24px 24px;
+    row-gap: 8px;
 }
 
 .histogram__header {
     display: flex;
     justify-content: space-between;
-    padding-bottom: 6px;
+    column-gap: 16px;
 }
 
 .histogram__header-link {
-    padding-left: 20px;
     display: block;
     white-space: nowrap;
     font-family: Inter, sans-serif;
@@ -37,7 +37,7 @@
     color: var(--black);
     opacity: 0.8;
     align-content: center;
-    margin-block: 0;
+    margin: 0;
 }
 
 .histogram__total {
@@ -48,8 +48,7 @@
     line-height: 26px;
     color: var(--black);
     opacity: 0.8;
-    margin-block: 0;
-    padding-bottom: 8px;
+    margin: 0;
 }
 
 .histogram__bars {
