--- a/components/page/page.css
+++ b/components/page/page.css
@@ -26,7 +26,6 @@
     flex-direction: column;
     flex-grow: 1;
     flex-shrink: 1;
-    justify-content: flex-end;
     align-items: center;
     
     background: var(--white);
